--- a/css/styles.css
+++ b/css/styles.css
@@ -4,24 +4,50 @@
   box-sizing: border-box;
 
   /* Color Palette */
-  --col1: #fffdfaff;
-  --col2: #f7717eff;
-  --col3: #6d435aff;
-  --col4: #352d39ff;
+  --bg-col: #fffdfa;
+  --col1: #c2bbf0;
+  --col2: #8fb8ed;
+  --col3: #62bfed;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 body {
   width: 100%;
   height: 100vh;
-  background-color: var(--col1);
-  font-family: 'Hind Madurai', sans-serif;
+  background-color: var(--bg-col);
+  font-family: "Hind Madurai", sans-serif;
+  font-weight: 300;
 }
 
 a {
-  text-decoration: none;
   color: black;
+  text-decoration: none;
 }
 
-h1 {
-  font-family: 'Ubuntu', sans-serif;
+.anchor {
+  display: none;
+}
+
+.link {
+  text-decoration: underline;
+  transition: all 0.3s ease 0s;
+}
+
+.link:hover {
+  background-color: black;
+  color: var(--bg-col);
+}
+
+h1,
+h2 {
+  font-family: "Prompt", sans-serif;
+}
+
+.prevent-select {
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
