--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,41 @@ body {
   background-color: var(--bg-col);
   font-family: "Hind Madurai", sans-serif;
   font-weight: 300;
+  text-align: center;
+}
+
+h1,
+h2,
+h3 {
+  font-family: "Prompt", sans-serif;
+}
+
+h2 {
+  margin: 20px 0;
+  font-size: 3rem;
+}
+
+button {
+  font-family: "Hind Madurai", sans-serif;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: black;
+  background-color: var(--bg-col);
+  border: none;
+  height: 55px;
+  width: 20%;
+  margin: 40px 30px;
+  border-radius: 25px;
+  cursor: pointer;
+  transition: transform 0.7s ease 0s, opacity 0.3s ease 0s;
+}
+
+button:hover {
+  transform: scale(1.1);
+}
+
+button:active {
+  opacity: 0.7;
 }
 
 a {
@@ -39,11 +74,6 @@ a {
 .link:hover {
   background-color: black;
   color: var(--bg-col);
-}
-
-h1,
-h2 {
-  font-family: "Prompt", sans-serif;
 }
 
 .prevent-select {
