--- a/css/footer.css
+++ b/css/footer.css
@@ -1,7 +1,7 @@
 footer {
   padding: 30px 0;
-  background-color: black;
-  color: var(--bg-col);
+  background-color: var(--bg-col);
+  color: black;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -13,7 +13,6 @@ footer {
 }
 
 #logo-copyright-location svg {
-  stroke: var(--bg-col);
   width: 1rem;
 }
 
@@ -32,10 +31,6 @@ h6 {
   font-size: 1.3rem;
 }
 
-footer a {
-  color: var(--bg-col);
-}
-
 #links a {
   display: block;
   transition: all 0.3s ease 0s;
@@ -50,6 +45,7 @@ footer a {
 }
 
 #footer-socials .socials svg {
-  width: 2rem;
+  width: 2.5rem;
   margin: 0 5px;
+  fill: black;
 }
