--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,4 @@
-body {
-  text-align: center;
-}
-
 #hero {
-  height: 67vh;
   background: var(--col1);
 }
 
@@ -19,39 +14,9 @@ body {
   font-size: 1.6rem;
 }
 
-button {
-  font-family: "Hind Madurai", sans-serif;
-  font-size: 1.5rem;
-  font-weight: bold;
-  color: black;
-  background-color: var(--bg-col);
-  border: none;
-  height: 55px;
-  width: 20%;
-  margin: 40px 30px 0 30px;
-  border-radius: 25px;
-  cursor: pointer;
-  transition: transform 0.7s ease 0s, opacity 0.3s ease 0s;
-}
-
-button:hover,
-.socials svg:hover {
-  transform: scale(1.1);
-}
-
-button:active,
-.socials svg:active {
-  opacity: 0.7;
-}
-
 .wave {
   width: 100%;
   display: block;
-}
-
-h2 {
-  margin: 20px 0;
-  font-size: 3rem;
 }
 
 #about-content {
@@ -81,7 +46,6 @@ h2 {
 #about button,
 #current-popenstein button {
   background-color: var(--col1);
-  margin-bottom: 40px;
 }
 
 #join-us {
@@ -90,6 +54,10 @@ h2 {
 
 #join-us h2 {
   margin: 0;
+}
+
+#join-us button {
+  margin: 20px 30px;
 }
 
 .socials {
@@ -101,6 +69,14 @@ h2 {
   margin: 0 15px;
   width: 3.5rem;
   transition: transform 0.7s ease 0s, opacity 0.3s ease 0s;
+}
+
+.socials svg:hover {
+  transform: scale(1.1);
+}
+
+.socials svg:active {
+  opacity: 0.7;
 }
 
 #current-popenstein {
