--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ button {
   background-color: var(--bg-col);
   border: none;
   height: 55px;
-  width: 20%;
+  width: 300px;
   margin: 40px 30px;
   border-radius: 25px;
   cursor: pointer;
@@ -52,7 +52,7 @@ button {
 }
 
 button:hover {
-  transform: scale(1.1);
+  transform: scale(1.05);
 }
 
 button:active {
@@ -84,34 +84,15 @@ a {
   user-select: none; /* Standard syntax */
 }
 
-/* RESPONSIVE DESIGN */
+/* RESPONSIVE DESIGN - Default: 1440px*/
 
-/* 4K Display < 2560px */
-@media screen and (max-width: 2560px) {
+@media screen and (max-width: 940px) {
+  button {
+    width: 32vw;
+    height: 5.85vw;
+  }
 
-}
-
-/* Laptop < 1024px */
-@media screen and (max-width: 1024px) {
-  
-}
-
-/* Tablet < 768px */
-@media screen and (max-width: 768px) {
-
-}
-
-/* Mobile L < 425px */
-@media screen and (max-width: 425px) {
-  
-}
-
-/* Mobile M < 375px */
-@media screen and (max-width: 375px) {
-
-}
-
-/* Mobile S < 320px */
-@media screen and (max-width: 320px) {
-
+  button p {
+    font-size: 2.15vw;
+  }
 }
